Editions page also fixed with Image full size on mobile.

--- a/src/styles/_blogroll.sass
+++ b/src/styles/_blogroll.sass
@@ -1,8 +1,9 @@
 // Blog Roll CSS is reused for Editions tag too 
 .roll-post-image
-  @extend %margin-container
-  width: 100%
-  height: 400px
+  // @extend %margin-container
+  width: 1000px
+  // width: 100%
+  // height: 400px
   background-size: cover
   background-repeat: no-repeat
   border: 3px solid $black
